--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,16 @@
-<h2>Reporter output</h2><table><tr><td>test1 method excuted</td></tr>
-<tr><td>test2 method excuted</td></tr>
+<h2>Reporter output</h2><table><tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Login method executed</td></tr>
+<tr><td>Logout method executed</td></tr>
+<tr><td>Logout method executed</td></tr>
+<tr><td>Logout method executed</td></tr>
+<tr><td>Logout method executed</td></tr>
+<tr><td>Logout method executed</td></tr>
 </table>
