--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8f8cc1">  <td>24/08/26 18:54:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test1()[pri:0, instance:TestNGPackage.Demo1@5bd03f44]">test1</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/26 18:54:14</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test2()[pri:0, instance:TestNGPackage.Demo1@5bd03f44]">test2</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
