--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/28 12:28:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityFlag.a()[pri:2, instance:TestNGFlags.PriorityFlag@19bb07ed]">a</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/28 12:28:14</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityFlag.b()[pri:3, instance:TestNGFlags.PriorityFlag@19bb07ed]">b</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/28 12:28:14</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityFlag.d()[pri:0, instance:TestNGFlags.PriorityFlag@19bb07ed]">d</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/28 12:28:14</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityFlag.g()[pri:0, instance:TestNGFlags.PriorityFlag@19bb07ed]">g</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/28 12:28:14</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityFlag.h()[pri:3, instance:TestNGFlags.PriorityFlag@19bb07ed]">h</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/28 12:28:14</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityFlag.n()[pri:3, instance:TestNGFlags.PriorityFlag@19bb07ed]">n</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.login()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">login</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/08/27 15:50:36</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountFlag.logout()[pri:0, instance:TestNGFlags.InvocationCountFlag@6e4784bc]">logout</td> 
+<tr bgcolor="8f8cc1">  <td>24/08/28 12:28:14</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityFlag.z()[pri:-1, instance:TestNGFlags.PriorityFlag@19bb07ed]">z</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
