--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,16 +1,8 @@
-<h2>Reporter output</h2><table><tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Login method executed</td></tr>
-<tr><td>Logout method executed</td></tr>
-<tr><td>Logout method executed</td></tr>
-<tr><td>Logout method executed</td></tr>
-<tr><td>Logout method executed</td></tr>
-<tr><td>Logout method executed</td></tr>
+<h2>Reporter output</h2><table><tr><td>z</td></tr>
+<tr><td>d</td></tr>
+<tr><td>z</td></tr>
+<tr><td>a</td></tr>
+<tr><td>b</td></tr>
+<tr><td>h</td></tr>
+<tr><td>n</td></tr>
 </table>
